feat: Migrate styling to Tailwind CSS
Replaces inline Tailwind CSS setup in index.html with a dedicated Tailwind CSS configuration and a separate CSS file. This centralizes styling management and improves maintainability.

--- a/index.html
+++ b/index.html
@@ -13,24 +13,7 @@
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23ef4444%22/><circle cx=%2230%22 cy=%2230%22 r=%2210%22 fill=%22white%22 opacity=%220.5%22/><circle cx=%2270%22 cy=%2230%22 r=%2210%22 fill=%22white%22 opacity=%220.5%22/><circle cx=%2230%22 cy=%2270%22 r=%2210%22 fill=%22white%22 opacity=%220.5%22/><circle cx=%2270%22 cy=%2270%22 r=%2210%22 fill=%22white%22 opacity=%220.5%22/></svg>">
     
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              lego: {
-                yellow: '#EAB308',
-                red: '#ef4444',
-                blue: '#3b82f6',
-                green: '#22c55e'
-              }
-            }
-          }
-        }
-      }
-    </script>
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         body {
